@@ -1,4 +1,4 @@
+dtrace
 dt_test
 profile
 systrace
-dtrace
